# datagram

./: README.md  pyproject.toml
datagram/: __init__.py
datagram/diagrams/: __init__.py  diagrams.py
